Fixed icon dilation issue on mobile

--- a/components/mobile.module.css
+++ b/components/mobile.module.css
@@ -555,7 +555,7 @@
     top: 42px;
     left: 37px;
     width: 56.93px;
-    height: 80px;
+    aspect-ratio: 1/1 !important;
 }
 .rectangleParent1 {
     position: absolute;
